--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
-  "name": "@hexlet/code",
-  "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Anna-Sed/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Anna-Sed/frontend-project-11/actions)",
-  "homepage": "https://github.com/Anna-Sed/frontend-project-11#readme",
-  "bugs": {
-    "url": "https://github.com/Anna-Sed/frontend-project-11/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Anna-Sed/frontend-project-11.git"
-  },
-  "license": "ISC",
-  "author": "Anna Sedeeva",
+  "name": "frontend-project-11",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@eslint/create-config": "^1.10.0",
-    "@eslint/js": "^9.34.0",
-    "@stylistic/eslint-plugin": "^5.3.1",
-    "eslint": "^9.34.0",
-    "globals": "^16.3.0"
+    "vite": "^7.1.2"
   }
 }
