--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "i18next": "^25.5.2",
     "on-change": "^5.0.1",
